--- a/requirements.txt
+++ b/requirements.txt
@@ -1,13 +1,20 @@
+astroid==3.3.5
 blinker==1.8.2
 click==8.1.7
 colorama==0.4.6
+dill==0.3.9
 flash==1.0.3
 Flask==3.0.3
 Flask-MySQL==1.5.2
 Flask-MySQLdb==2.0.0
+isort==5.13.2
 itsdangerous==2.2.0
 Jinja2==3.1.4
 MarkupSafe==2.1.5
+mccabe==0.7.0
 mysqlclient==2.2.4
+platformdirs==4.3.6
+pylint==3.3.1
 PyMySQL==1.1.1
+tomlkit==0.13.2
 Werkzeug==3.0.4
