--- a/requirements.txt
+++ b/requirements.txt
@@ -13,8 +13,10 @@ Jinja2==3.1.4
 MarkupSafe==2.1.5
 mccabe==0.7.0
 mysqlclient==2.2.4
+numpy==2.1.1
 platformdirs==4.3.6
 pylint==3.3.1
 PyMySQL==1.1.1
+scipy==1.14.1
 tomlkit==0.13.2
 Werkzeug==3.0.4
